test/valid/tcomp000_collatz/collatz.mag
-- Author: tcomp000, Vasco T. Vasconcelos

-- See https://en.wikipedia.org/wiki/Collatz_conjecture for the Collatz Conjecture

fun f (n) : Int -> Int =
  if n % 2 == 0 then n / 2 else 3 * n + 1

fun conjecture (n) : Int -> Unit =
  if f(n) != 0 then conjecture (n - 1)

fun main (_) : Unit -> Unit =
  print(conjecture(43786))

  
