test/invalid-syntax/tcomp000_wrong_comment/wrong_comment.mag
-- Author: tcomp000, Vasco T. Vasconcelos

# Comments are to start with --, not #

fun main (_) : Unit -> Unit = unit
